[gd_scene load_steps=9 format=3 uid="uid://c75i61yyvkd1e"]

[ext_resource type="Script" path="res://scenes/games/pool_royale/scripts/pool_royale.gd" id="1_x1ler"]
[ext_resource type="FontFile" uid="uid://dd1r2fwpg8dya" path="res://shared/fonts/MPLUSCodeLatin-Medium.ttf" id="2_87d87"]
[ext_resource type="FontFile" uid="uid://rmkjlvce4dyv" path="res://shared/fonts/MPLUSCodeLatin-Bold.ttf" id="3_2fwka"]
[ext_resource type="PackedScene" uid="uid://cowkp06pmwewa" path="res://scenes/games/pool_royale/bumper.tscn" id="3_x2hen"]
[ext_resource type="Script" path="res://scenes/games/cannon/countdown.gd" id="4_ilfop"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8bwd"]
size = Vector2(1442, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3ik3"]
size = Vector2(976, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5f53"]
size = Vector2(2698, 480)

[node name="PoolRoyale" type="Node2D"]
script = ExtResource("1_x1ler")

[node name="BG" type="ColorRect" parent="." groups=["Background"]]
offset_left = -149.0
offset_top = -161.0
offset_right = 2066.0
offset_bottom = 1201.0
color = Color(0.635294, 0.639216, 0.541176, 1)

[node name="ViewerContainer" type="Node2D" parent="."]

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(960, 32)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("RectangleShape2D_s8bwd")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D2"]
color = Color(0.0941176, 0.0941176, 0.0941176, 1)
polygon = PackedVector2Array(-720, -32, -720, 32, 720, 32, 720, -32)

[node name="Direction" type="Label" parent="StaticBody2D2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "90"
horizontal_alignment = 1

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2(960, 1049)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
shape = SubResource("RectangleShape2D_s8bwd")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D5"]
color = Color(0.0941176, 0.0941176, 0.0941176, 1)
polygon = PackedVector2Array(-720, -32, -720, 32, 720, 32, 720, -32)

[node name="Direction" type="Label" parent="StaticBody2D5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "270"
horizontal_alignment = 1

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(1888, 540)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource("RectangleShape2D_m3ik3")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D3"]
color = Color(0.0941176, 0.0941176, 0.0941176, 1)
polygon = PackedVector2Array(-488, -32, -488, 32, 488, 32, 488, -32)

[node name="Direction" type="Label" parent="StaticBody2D3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0001
offset_top = 24.0
offset_right = 19.9999
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "0"
horizontal_alignment = 1

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(31, 540)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource("RectangleShape2D_m3ik3")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D4"]
color = Color(0.0941176, 0.0941176, 0.0941176, 1)
polygon = PackedVector2Array(-488, -32, -488, 32, 488, 32, 488, -32)

[node name="Direction" type="Label" parent="StaticBody2D4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = 31.0
offset_right = 35.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "180"
horizontal_alignment = 1

[node name="Bumper" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(320, 768)

[node name="Bumper2" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(320, 320)

[node name="Bumper3" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(1600, 768)

[node name="Bumper4" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(1600, 320)

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(959, -275)
shape = SubResource("RectangleShape2D_n5f53")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(959, 1354)
shape = SubResource("RectangleShape2D_n5f53")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(-359, 625)
rotation = 1.5708
shape = SubResource("RectangleShape2D_n5f53")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(2276, 568)
rotation = 1.5708
shape = SubResource("RectangleShape2D_n5f53")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Waiting" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.5
offset_top = -30.0
offset_right = 362.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 61
text = "Waiting for players
Type !join to play"
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -82.0
offset_right = 396.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(396, 165)
theme_override_fonts/font = ExtResource("3_2fwka")
theme_override_font_sizes/font_size = 131
text = "STARTS IN
10"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_ilfop")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Countdown"]
self_modulate = Color(0.054902, 0.054902, 0.054902, 0.662745)
show_behind_parent = true
layout_mode = 0
offset_left = -801.0
offset_top = -527.0
offset_right = 1667.0
offset_bottom = 876.0

[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
[connection signal="finished" from="CanvasLayer/Countdown" to="." method="_on_countdown_finished"]
